@startuml

class Visit {
  
}

class VisitMapper {
  
    +toDTOlist(sortedVisits)
    +toDTO(visit)

}

class VisitDTO {
  
}

class Util {
  
    +getChosenSortingAlgorithm()
    

}


class ListAllBookingsRequestsToAgentUI {

    

}

class ListAllBookingsRequestsToAgentController {

  
}

class VisitRepository {

    +getAllVisitsByAgentAndDateRange(Agent,start,end)
    +sortVisitsAscending(visits)

}




class Repositories {

    +getInstance()
    +getVisitRepository()

}


ListAllBookingsRequestsToAgentUI -[dashed]-> ListAllBookingsRequestsToAgentController
ListAllBookingsRequestsToAgentController-[dashed]-> Repositories
ListAllBookingsRequestsToAgentController-[dashed]-> VisitRepository
ListAllBookingsRequestsToAgentController-[dashed]-> VisitMapper
ListAllBookingsRequestsToAgentController-[dashed]-> Util
VisitMapper -[dashed]-> VisitDTO
VisitMapper -[dashed]-> Visit


VisitRepository -down-> "*" Visit

Repositories --> Repositories: Instance

Repositories -->"1" VisitRepository






@enduml